fix municipalities chart overflow

--- a/src/style/visualizations/main.sass
+++ b/src/style/visualizations/main.sass
@@ -526,12 +526,16 @@ $box-shadow: 0 6px 38px -18px rgba(0, 0, 0, 0.3), 0 11px 12px -12px rgba(0, 0, 0
       .total-and-new
         display: flex
         align-items: space-between
-        justify-content: flex-start 
+        justify-content: flex-start
+        @include media-breakpoint-up(md)
+          flex-flow: column
 
       .new
         font-size: $font-size
         color: $bar-new-color
         padding-left: 4px
+        @include media-breakpoint-up(md)
+          padding-left: 0px
 
       .date
         color: $gray-600
@@ -580,14 +584,14 @@ $box-shadow: 0 6px 38px -18px rgba(0, 0, 0, 0.3), 0 11px 12px -12px rgba(0, 0, 0
       display: flex
       align-items: flex-end
       justify-content: flex-end
-      height: 62px
+      height: 80px
       border-bottom: solid 1px $gray-300
 
     .bar-wrapper
       position: relative
       display: flex
       align-items: flex-end
-      height: 50px
+      height: 68px
 
       &:hover
         .total-and-date--hover
